--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1574,6 +1574,9 @@ ourgroceries==1.5.4
 # homeassistant.components.ovo_energy
 ovoenergy==2.0.0
 
+# homeassistant.components.energy_owl
+owlsensor==0.2
+
 # homeassistant.components.p1_monitor
 p1monitor==3.1.0
 
